Created Departments Model

--- a/Departments.Service/appsettings.json
+++ b/Departments.Service/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=Ringo_Media_DB;User Id=sa; Password=thisispassword;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
