--- a/Departments.Service/Departments.Service.csproj
+++ b/Departments.Service/Departments.Service.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Departments.Migrations\Departments.Migrations.csproj" />
+  </ItemGroup>
+
 </Project>
