Added the list of department with sub departments

--- a/Departments.DI/Departments.DI.csproj
+++ b/Departments.DI/Departments.DI.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Departments.DAL\Departments.DAL.csproj" />
+    <ProjectReference Include="..\Departments.BL\Departments.BL.csproj" />
   </ItemGroup>
   
 </Project>
